Bug 1251346 - Fennec should not generate touch events from mouse events. r=kats